--- a/app/src/main/res/layout/modelo_filmes.xml
+++ b/app/src/main/res/layout/modelo_filmes.xml
@@ -8,27 +8,31 @@
     android:focusable="true">
 
     <LinearLayout
-        android:layout_width="180dp"
-        android:layout_height="220dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
             android:layout_width="180dp"
             android:layout_height="200dp"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="2dp"
+            android:layout_margin="4sp"
             android:scaleType="centerCrop"
-            android:src="#2c2c2c" />
+            android:src="@drawable/aranha"
+            />
 
         <TextView
             android:id="@+id/txtTituloFilmes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Título Filme"
+            android:layout_marginTop="5sp"
+            android:text="Aranha"
+            android:textAllCaps="true"
             android:textColor="#000"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            />
 
     </LinearLayout>
 
